<resources>
    <string name="app_name">BlogApp</string>
    <string name="emailMainEditText_hint">email</string>
    <string name="passwordMainEditText_hint">password</string>
    <string name="loginMainButton_text">LOGIN</string>
    <string name="signupMainButton_text">SIGN UP</string>
    <string name="exitMainButton_text">EXIT</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="nameSignupEditText_hint">Enter name</string>
    <string name="lastnameSignupEditText_hint">Enter last name</string>
    <string name="emailSignupEditText">Enter email address</string>
    <string name="passwordSignupEditText_hint">Enter password</string>
    <string name="rePasswordSignupEditText">Retype password</string>
    <string name="createSignupButton">CREATE ACCOUNT</string>
    <string name="logoutBlogButton_text">LOGOUT</string>
</resources>
